--- a/server/pom.xml
+++ b/server/pom.xml
@@ -70,6 +70,12 @@
             <scope>compile</scope>
         </dependency>
 
+        <!-- 链路跟踪 -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-sleuth</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
