--- a/server/src/main/resources/bootstrap.yml
+++ b/server/src/main/resources/bootstrap.yml
@@ -17,3 +17,6 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:8671/eureka/
+logging:
+  level:
+    org.springframework.cloud.openfeign: debug
